add google analytics

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         s.parentNode.insertBefore(hm, s);
         })();
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGCMHK825L"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-TGCMHK825L');
+    </script>
 </head>
 <body>
     <div class="container">
