--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         s.parentNode.insertBefore(hm, s);
         })();
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-184308395-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-184308395-2');
+    </script>
     <!-- Hotjar Tracking Code for https://yuchenau.github.io/resume -->
     <script>
         (function(h,o,t,j,a,r){
